--- a/src/public/style.css
+++ b/src/public/style.css
@@ -1,7 +1,37 @@
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+
+}
+body{
+    background-color: rgb(27, 27, 27);
+    color: rgb(221, 220, 220);
+}
+h3{
+    text-transform: uppercase;
 }
 
-body {
+.blogTitle{
+  text-align: center;
+}
+
+hr{
+    opacity: 0.5;
+    width: 60%;
+    margin: 0 auto;
+    margin-bottom: 3rem;
+}
+
+.content {
+    width: 90%;
+    margin: 0 auto;
+}
+
+.singlePostSection{
     text-align: center;
+}
+
+.homePosts{
+    text-decoration: none;
 }
