--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,3 +1,5 @@
+<!-- @todo: De făcut să arate frumos💄! -->
+<!-- @todo: De completat cu informații! -->
 <%- include('../partials/header') %>
 <header>
     <h1>Welcome to my Blog 🎉</h1>
