Am facut routele pentru CRUD dar nu m-am descurcat sa implementez post si put.

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,4 +1,16 @@
 <%- include('../partials/header') %>
-<h2><%= posts[0].title %></h2>
-<p><%= posts[0].content %></p>
+<header>
+    <h1> Welcome to my blog!</h1>
+</header>
+<div>
+    <% posts.forEach(post => { %>
+        <article>
+            <h2><a href="/posts/<%= post.slug %>"> <%= post.title %></a></h2>
+            <p><%= post.content %></p>
+        </article>
+        <% }) %>
+    <a href="../api/CreatePostPage"> Create New Post</a><br>
+    <a href="../api/deleteAll"> Delete All Posts</a>
+</div>
+
 <%- include('../partials/footer') %>
