--- a/views/pages/CreatePostPage.ejs
+++ b/views/pages/CreatePostPage.ejs
@@ -1,26 +1,30 @@
 <%- include('../partials/header') %>
+<link rel='stylesheet' href='/style-other-pages.css'/> 
+</head>
+<body>
 <header>
     <title>Create Post</title>
 </header>
-<div contenteditable="true">
-    <ul>
-        <li>
-            Post title: <br><input type="text" name="title" placeholder="Your Post Title">
-        </li>
-        <li>
-            Post content: <br><textarea name="message" placeholder="Your Post content"></textarea>
-        </li>
-        <li>
-            Post slug: <br><input type="text" name="slug" placeholder="Your Post identifier"> 
-        </li>
-    </ul>
-    
-
+<div class="background-image">
+<div class="container">
+    <form action="http://localhost:3000/admin/api/CreatePostPage/createPost" method="POST">
+        <ul class="elements">
+            <li>
+               New Post title: <br><input type="text" id="title" name="title" placeholder="Your Post Title">
+            </li>
+            <li>
+                New Post content: <br><textarea name="content" id="content" placeholder="Your Post content"></textarea>
+            </li>
+            <li>
+                New Post slug: <br><input type="text" name="slug" id="slug" placeholder="Your Post identifier"> 
+            </li>
+        </ul>
+        <button id="submit-post-button">Submit</button>
+    </form>
+    <a class="go-back-home" href="/"> Go back to Home</a>
 </div>
-<button type="button" id="submit-post-button">Submit Post</button>
-<br>
-<br>
-<a href="/admin/api/posts"> Go back to Home</a>
-
-
+</div>
+<div class="pading-bottom">
+    <p></p> 
+</div> 
 <%- include('../partials/footer') %>
