--- a/views/pages/deleteAllPage.ejs
+++ b/views/pages/deleteAllPage.ejs
@@ -1,10 +1,19 @@
 <%- include('../partials/header') %>
+<link rel='stylesheet' href='/style-other-pages.css'/> 
+</head>
+<body>
 <header>
     <title>Deleted all posts</title>
 </header>
-<div>
+<div class="background-image">
+<div class="container">
     <p>All posts were deleted</p>
-    <a href="/admin/api/posts"> Go back to Home</a>
+    <div class="go-back-home">
+        <a href="/"> Go back to Home</a>
+    </div>
 </div>
-
+</div>
+<div class="pading-bottom">
+    <p></p> 
+</div> 
 <%- include('../partials/footer') %>
