--- a/views/pages/notFound.ejs
+++ b/views/pages/notFound.ejs
@@ -1,14 +1,16 @@
 <%- include('../partials/header') %>
-<<<<<<< HEAD
-
-<div>
+<link rel='stylesheet' href='/style-other-pages.css'/> 
+</head>
+<body>
+<div class="background-image">
+<div class="container">
     <p>Page not found</p>
+    <div class="go-back-home">
+        <a href="/"> Go back to Home</a>
+    </div>
 </div>
-
-<%- include('../partials/footer') %>
-=======
-<div>
-    <p>Page not found!</p>
 </div>
+<div class="pading-bottom">
+    <p></p> 
+</div> 
 <%- include('../partials/footer') %>
->>>>>>> acb948e66331317a3d2ef953e01b8ce46f476e3a
