--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Blog</title>
+    <link rel="stylesheet" type="text/css" href="vendors/css/ionicons.min.css">
+	<link href="https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet"> 
+    <link rel='stylesheet' href='/footer-style.css'/> 
     <link rel="stylesheet" href="/style.css">
-</head>
-<body>
+
