--- a/views/pages/EditPostPage.ejs
+++ b/views/pages/EditPostPage.ejs
@@ -15,13 +15,11 @@
             <li>
                 Edit post content: <br><textarea id="content" name="content"><%= post.content %></textarea>
             </li>
-            <li>ID: <%= post.id %></li>
         </ul>
     <button type="submit" id="submit-post-button">Submit edited Post</button>
     </form>
-    <div class="go-back-home">
-        <a href="/"> Go back to Home</a>
-    </div>
+    <a class="go-back-home" href="/"> Go back to Home</a>
+    
 </div>
 </div>
 <div class="pading-bottom">
