--- a/views/pages/notFound.ejs
+++ b/views/pages/notFound.ejs
@@ -4,10 +4,9 @@
 <body>
 <div class="background-image">
 <div class="container">
-    <p>Page not found</p>
-    <div class="go-back-home">
-        <a href="/"> Go back to Home</a>
-    </div>
+    <h3></h3>
+    <h3>Page not found</h3>
+    <a class="go-back-home" href="/"> Go back to Home</a>
 </div>
 </div>
 <div class="pading-bottom">
