--- a/views/pages/postCreated.ejs
+++ b/views/pages/postCreated.ejs
@@ -7,10 +7,10 @@
 </header>
 <div class="background-image">
 <div class="container">
-    <p>Post with title '<%= post.title %>' was created</p>
-    <div class="go-back-home">
-        <a href="/"> Go back to Home</a>
-    </div>
+    <h3></h3>
+    <h3>Post with title '<%= post.title %>' was created</h3>
+    <a class="go-back-home" href="/"> Go back to Home</a>
+ 
 </div>
 </div>
 <div class="pading-bottom">
