--- a/views/pages/postUdated.ejs
+++ b/views/pages/postUdated.ejs
@@ -7,10 +7,9 @@
 </header>
 <div class="background-image">
 <div class="container">
-    <p>Post with id '<%= updatedPost.id %>' was updated</p>
-    <div class="go-back-home">
-        <a href="/"> Go back to Home</a>
-    </div>
+    <h3></h3>
+    <h3>Post with Title '<%= updatedPost.title %>' was updated</h3>
+    <a class="go-back-home" href="/"> Go back to Home</a>
 </div>
 </div>
 <div class="pading-bottom">
