--- a/src/public/style-other-pages.css
+++ b/src/public/style-other-pages.css
@@ -23,11 +23,12 @@ body{
 }
 
 .container {
-    padding-top: 15%;
+    padding-top: 5%;
     padding-left: 5%;
     display: flex;
     text-align: center;
-    flex-flow: column wrap;
+    flex-direction: column;
+    justify-content: space-between;
     height: 90vh;
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 1));
 }
