--- a/src/public/style-single.css
+++ b/src/public/style-single.css
@@ -23,10 +23,10 @@ body{
 }
 
 .container {
-    padding-top: 15%;
+    padding-top: 5%;
     text-align: justify;
     display: flex;
-    flex-flow: column wrap;
+    flex-direction: column;
     height: 90vh;
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 1));
 }
