--- a/views/pages/DeletePage.ejs
+++ b/views/pages/DeletePage.ejs
@@ -7,10 +7,11 @@
 </header>
 <div class="background-image">
 <div class="container">
-    <p>Post was deleted</p>
-    <div class="go-back-home">
-        <a href="/"> Go back to Home</a>
-    </div>
+    <h3></h3>
+    <h3>Post was deleted</h3>
+    
+    <a class="go-back-home" href="/"> Go back to Home</a>
+    
 </div>
 </div>
 <div class="pading-bottom">
