--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,19 +3,19 @@
             <div class="row">
                 <div class="col span-1-of-2">
                     <ul class="footer-nav">
-                        <li><a href="#">About us</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Press</a></li>
-                        <li><a href="#">iOS App</a></li>
-                        <li><a href="#">Android App</a></li>
+                        <li><a title="This is purely decorative" href="#">About us</a></li>
+                        <li><a title="This is purely decorative" href="#">Blog</a></li>
+                        <li><a title="This is purely decorative" href="#">Press</a></li>
+                        <li><a title="This is purely decorative" href="#">iOS App</a></li>
+                        <li><a title="This is purely decorative" href="#">Android App</a></li>
                     </ul>
                 </div>
                 <div class="col span-1-of-2">
                     <ul class="social-links">
-                        <li><a href="#"><ion-icon class="ion-social-facebook" name="logo-facebook"></ion-icon></a></li>
-                        <li><a href="#"><ion-icon class="ion-social-twitter" name="logo-twitter"></ion-icon></a></li>
-                        <li><a href="#"><ion-icon class="ion-social-googleplus" name="logo-google"></ion-icon></a></li>
-                        <li><a href="#"><ion-icon class="ion-social-instagram" name="logo-instagram"></ion-icon></a></li>
+                        <li><a title="This is purely decorative" href="#"><ion-icon class="ion-social-facebook" name="logo-facebook"></ion-icon></a></li>
+                        <li><a title="This is purely decorative" href="#"><ion-icon class="ion-social-twitter" name="logo-twitter"></ion-icon></a></li>
+                        <li><a title="This is purely decorative" href="#"><ion-icon class="ion-social-googleplus" name="logo-google"></ion-icon></a></li>
+                        <li><a title="This is purely decorative" href="#"><ion-icon class="ion-social-instagram" name="logo-instagram"></ion-icon></a></li>
                     </ul>
                 </div>
             </div>
